[package]
name = "bevy_chime"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.1", default-features = false }
chime = "0.3.0"

[dev-dependencies]
accurate = "0.3.1"

[dev-dependencies.bevy]
version = "0.12.1"
default-features = false
features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_sprite",
    "dynamic_linking",
    "debug_glam_assert",
]

[profile.dev.package."*"]
opt-level = 3 # Faster dependency compilation

[lib]
name = "bevy_chime"
path = "src/lib.rs"

[[example]]
name = "testing" # cargo run --example testing