[package]
name = "bevy_chime"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app = { version = "0.14.0" }
bevy_ecs = { version = "0.14.0" }
bevy_time = { version = "0.14.0" }
#chime = { version = "0.6", features = ["bevy"] }
chime = { path = "../chime", features = ["bevy"] }

[dev-dependencies]
accurate = "0.3.1"

[dev-dependencies.bevy]
version = "0.14.0"
default-features = false
features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_sprite",
    "dynamic_linking",
    "debug_glam_assert",
]

[profile.dev.package."*"]
opt-level = 3 # Faster dependencies, slower clean build
debug = true

[lib]
name = "bevy_chime"
path = "src/lib.rs"

[[example]]
name = "testing" # cargo run --example testing